objects/Event__c/fields/Booked_Seats__c.field-meta.xml
<CustomField>
    <fullName>Booked_Seats__c</fullName>
    <description>Cumulative booked seats across all ticket types for this event</description>
    <label>Booked Seats</label>
    <summarizedField>Ticket_Type__c.Booked_Seats__c</summarizedField>
    <summaryForeignKey>Ticket_Type__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>