objects/Event__c/fields/Proposed_Budget__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Budget__c</fullName>
    <description>Proposed expense budget driving approval routing</description>
    <label>Proposed Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>