objects/Event__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Start date and time of the event</description>
    <label>Start Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>