objects/Event__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Venue hosting this event</description>
    <label>Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>