objects/Event__c/recordTypes/In_Person_Event.recordType-meta.xml
<RecordType>
    <fullName>In_Person_Event</fullName>
    <active>true</active>
    <description>On-site physical event hosted at a venue location.</description>
    <label>In-Person Event</label>
</RecordType>