objects/Event__c/recordTypes/Virtual_Event.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Event</fullName>
    <active>true</active>
    <description>Online webinars, virtual summits, and remote conferences.</description>
    <label>Virtual Event</label>
</RecordType>