objects/Event__c/validationRules/Budget_Required_On_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Required_On_Submit</fullName>
    <active>true</active>
    <description>Ensures Proposed Budget is populated before submitting for approval.</description>
    <errorConditionFormula>ISBLANK(Proposed_Budget__c) &amp;&amp; ISPICKVAL(Approval_Status__c, &quot;Pending Approval&quot;)</errorConditionFormula>
    <errorDisplayField>Proposed_Budget__c</errorDisplayField>
    <errorMessage>Proposed Budget is required before submitting an event for approval.</errorMessage>
</ValidationRule>