objects/Event__c/validationRules/No_Self_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Self_Approval</fullName>
    <active>true</active>
    <description>Prevents an event organizer from approving their own event.</description>
    <errorConditionFormula>ISPICKVAL(Approval_Status__c, &quot;Approved&quot;) &amp;&amp; NOT(ISBLANK(Approved_By__c)) &amp;&amp; Approved_By__c = Organizer__c</errorConditionFormula>
    <errorDisplayField>Approval_Status__c</errorDisplayField>
    <errorMessage>An organizer cannot approve their own event.</errorMessage>
</ValidationRule>