objects/Event__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <description>Ensures a Rejection Reason is documented when rejecting an event.</description>
    <errorConditionFormula>ISPICKVAL(Approval_Status__c, &quot;Rejected&quot;) &amp;&amp; ISBLANK(Rejection_Reason__c)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Rejection Reason is mandatory when an event is rejected.</errorMessage>
</ValidationRule>