objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>Venue__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Publication_Status__c</columns>
    <columns>Registration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Events</label>
</ListView>